# CyberBattleEnv

./: .gitignore  Dockerfile  README.md  _actual_live_test.txt  _aivai.py  _aivai_out.txt  _benchmark.py  _check_local.py  _dual_local.py  _dual_test.txt  _final_live.txt  _fix.txt  _fix_main.py  _fix_runtask.py  _fulltest.py  _fulltest_out.txt  _live_dual.txt  _live_final2.py  _pat.txt  _pfix.py  _r.txt  _step_test.txt  _test_inference.txt  _test_inference2.txt  _test_log_format.py  _test_out.txt  _v.txt  _verify.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  terminal_transcript.txt
cyber_battle_env/: __init__.py  client.py  models.py
cyber_battle_env/server/: __init__.py  app.py  environment.py
cyber_battle_env/server/static/: index.html
server/: app.py
